# desktop-notes

./: CMakeLists.txt  README.md  for-future-considerations.md  manual_QA_checklist.txt  specs-draft.md  specs.md  test_note.md  test_note.txt
desktop-notes/: metadata.json
desktop-notes-plasmoid/: CMakeLists.txt  how-to-setup.txt  metadata.json
desktop-notes-plasmoid/code/: data_model.py  main.py
desktop-notes-plasmoid/contents/ui/: ManagementView.qml  StylingDialog.qml  main.qml
desktop-notes/desktop_notes/: __init__.py  all_notes_view.py  config.py  data_manager.py  main.py  note_widget.py  styling_dialog.py  utils.py
package/: metadata.desktop  metadata.json
package/contents/code/: main_plasmoid.py
src/: CMakeLists.txt  allnotesdialog.cpp  allnotesdialog.h  config.h  database.py  desktopnotesapplet.cpp  desktopnotesapplet.h  main.py  management_view.py  note_widget.py  styling_dialog.py  stylingdialog.cpp  stylingdialog.h  utils.py
src/data/: databasemanager.cpp  databasemanager.h  notedata.h
